# ogl_rend

./: .clangd  CMakeLists.txt  README.md  README.txt  build.sh
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
